# murmur

./: .gitignore  AESEncryption.java  LICENSE  README.md
grammar/: Protocol.java
murmurRelay/: settings.gradle
murmurRelay/app/: build.gradle
murmurRelay/app/src/main/java/org/murmurRelay/: App.java
murmurRelay/app/src/main/java/org/murmurRelay/domains/: Relay.java  Server.java
murmurRelay/app/src/main/java/org/murmurRelay/factory/: RelayManagerFactory.java
murmurRelay/app/src/main/java/org/murmurRelay/grammar/: Protocol.java
murmurRelay/app/src/main/resources/config/: relay.json
murmurRelay/app/src/test/java/org/murmurRelay/: AppTest.java
murmurServer/: .gitignore  README.md  READMe.md  settings.gradle
murmurServer/app/: build.gradle
murmurServer/app/src/main/java/: module-info.java
murmurServer/app/src/main/java/org/murmurServer/: App.java
murmurServer/app/src/main/resources/config/: server1.json  server2.json
murmur_relay/: Cargo.toml  README.md  READMe.md
murmur_relay/src/: main.rs
murmur_relay/src/domains/: mod.rs  relay.rs  server.rs
murmur_relay/src/grammar/: protocol.rs
murmur_relay/src/infrastructures/: json_repositories.rs  mod.rs
murmur_relay/src/infrastructures/dto/: mod.rs  relay_dto.rs  server_dto.rs
murmur_relay/src/infrastructures/mapper/: mapping.rs
murmur_relay/src/relay/: mod.rs  relay_manager.rs
murmur_relay/src/resources/: relay.json
murmur_relay/src/servers/: mod.rs  server_runnable.rs
murmur_relay/src/utils/: aes_codec.rs  mod.rs  net_chooser.rs
(+70 files in other folders)
