[package]
name = "murmur_relay"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
network-interface = "1.0.0"
if-addrs = "0.10.1"
multicast-socket = "0.2.2"
multicast_dns = "0.5.0"
libc = "0.2.140"
aes = "0.8.2"
aes-gcm = "0.10.1"
base64 = "0.21.0"
crypto-common = "0.1.6"
cipher = "0.4.4"
rand = "0.8.5"